# InkPi

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  README.md  main.py  mkdocs.yml  preview.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/: inkpi.example.json
data/: cards.json
docs/: README.md  about.md  architecture-overview.md  architecture.md  developer-guide.md  development-plan.md  index.md  inkpi-architecture.md  usage-guide.md
docs/development/: plan.md
docs/guides/: deployment.md  developer-guide.md
docs/services/: admin-portal-design.md  admin.md  core.md  dashboard.md  display.md
inkpi/: __init__.py  bootstrap.py  cli.py  client.py  config.py  contracts.py  core.py  ipc.py
inkpi/adapters/: __init__.py  contracts.py  github_api.py  knowledge_cards.py  open_meteo.py
inkpi/admin/: __init__.py  auth.py  events.py  helper_client.py  network_helper.py  network_policy.py  operations.py  portal.py  preview.py  privileged.py  server.py  service.py
inkpi/dashboard/: __init__.py  contracts.py  controller.py  preview_data.py
inkpi/display/: __init__.py  adapter.py  engine.py  file_backend.py  service.py
inkpi/domain/: __init__.py  models.py
inkpi/fonts/: NERD-FONTS-LICENSE.txt  OFL.txt  __init__.py
inkpi/lib/: __init__.py
inkpi/management/: __init__.py  service.py
inkpi/services/: __init__.py  codex.py  contracts.py  dashboard.py  datetime.py  github.py  posts.py  scheduler.py  system.py  weather.py
inkpi/ui/: README.md  __init__.py  codex_panel.py  constants.py  drawing.py  eink_preview.py  github_panel.py  knowledge_card_panel.py  renderer.py  sidebar_panel.py
scripts/: hardware_24h_test.sh  smoke_test.sh
scripts/systemd/: eink-dashboard.service  inkpi-admin.service  (+4 more)
src/: app.py  bootstrap.py  config.py
tests/: conftest.py  test_admin_auth.py  test_admin_events.py  test_admin_integration.py  test_admin_network_helper.py  test_admin_network_policy.py  test_admin_operations.py  test_admin_portal.py  test_admin_preview.py  test_admin_preview_live.py  test_admin_server.py  test_admin_service.py  test_admin_service_integration.py  test_admin_session_auth.py  test_admin_staged_wifi.py  test_admin_systemd.py  test_aggregation_and_bootstrap.py  test_cli_preview.py  test_eink_preview.py  test_file_backend.py  test_font_architecture.py  test_helper_client.py  test_hidden_hotspot.py  test_inkpi_config_and_dashboard.py  test_inkpi_core_contracts.py  test_inkpi_display_engine.py  test_privileged.py  test_rendering_structure.py  test_runtime_policies.py  test_services.py
(+44 files in other folders)
