[project]
name = "inkpi"
version = "0.2.1"
description = "Modular Raspberry Pi e-ink dashboard appliance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"pillow>=10.0.0",
	"requests>=2.32.0",
]

[project.optional-dependencies]
rpi = [
	"lgpio>=0.2.2.0",
	"rpi-gpio>=0.7.1",
	"spidev>=3.6",
	"gpiozero>=2.0",
]
dev = [
	"pytest>=8.3.0",
	"ruff>=0.9.0",
]

[project.scripts]
inkpi-admin = "inkpi.cli:admin_main"
inkpi-core = "inkpi.cli:core_main"
inkpi-display = "inkpi.cli:display_main"
inkpi-ctl = "inkpi.cli:control_main"
inkpi-preview = "inkpi.cli:preview_main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["inkpi*", "src*"]

[tool.setuptools.package-data]
"inkpi.fonts" = ["*.ttf", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["inkpi/lib"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",
    "W191",
    "W293",
    "W291",
    "I001",
    "F401",
    "F841",
    "E402",
    "UP035",
    "UP042",
    "UP015",
    "UP031",
    "UP036",
    "B905",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
]
